// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentText renders with only the description 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  color: #2E2E2E;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 27px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with only the title 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with title and description 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 20px;
  }
}

.emotion-1 {
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "Poppins",sans-serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 700;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.2155em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.2125em;
    display: block;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  color: #2E2E2E;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 27px;
    font-weight: 400;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-1::before {
    content: '';
    margin-bottom: -0.391em;
    display: block;
  }

  .emotion-1::after {
    content: '';
    margin-top: -0.409em;
    display: block;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;
